// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class=
        ms-DonutChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone3"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Donut chart example"
          class=

              {
                alignment-adjust: center;
                box-sizing: content-box;
                display: block;
                height: -40px;
                overflow: visible;
                width: 0px;
              }
          focusable="false"
          viewBox="0 0 0 0"
        >
          <g
            transform="translate(0, -20)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class=

                    {
                      cursor: default;
                      fill: #E5E5E5;
                      outline: transparent;
                      stroke: #ffffff;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                d="M0.585,-54.997A55,55,0,0,1,51.383,-19.615L-18.955,6.382Z"
                data-is-focusable="true"
                id="_Pie_1first20000"
                opacity="1"
                role="img"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class=

                    {
                      cursor: default;
                      fill: #0078D4;
                      outline: transparent;
                      stroke: #ffffff;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                d="M51.789,-18.517A55,55,0,0,1,-22.338,50.26L8.846,-17.938Z"
                data-is-focusable="true"
                id="_Pie_1second39000"
                opacity="1"
                role="img"
                tabindex="-1"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class=

                    {
                      cursor: default;
                      fill: #DADADA;
                      outline: transparent;
                      stroke: #ffffff;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                d="M-23.402,49.773A55,55,0,0,1,-0.585,-54.997L-0.585,19.991Z"
                data-is-focusable="true"
                id="_Pie_1third45000"
                opacity="1"
                role="img"
                tabindex="-1"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class=
          ms-Callout-container
          {
            position: relative;
          }
      style="visibility: hidden;"
    >
      <div
        class=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 2px;
              box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
              box-sizing: border-box;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
              z-index: 1000000;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
        data-is-focusable="false"
        hidden=""
        id="callout0"
        style="opacity: 0; filter: opacity(0); pointer-events: none;"
        tabindex="-1"
      >
        <div
          class=
              ms-Callout-main
              {
                background-color: #ffffff;
                border-radius: 2px;
                overflow-x: hidden;
                overflow-y: auto;
                position: relative;
                width: 100%;
              }
          role="text"
          style="outline: none; max-height: 100%;"
        >
          <div
            class=

                {
                  background-blend-mode: normal, luminosity;
                  background-color: #ffffff;
                  display: grid;
                  overflow: hidden;
                  padding-bottom: 10px;
                  padding-left: 16px;
                  padding-right: 16px;
                  padding-top: 11px;
                }
          >
            <div
              class=

                  {
                    display: flex;
                    flex-direction: row;
                    justify-content: space-between;
                  }
            >
              <div
                class=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: #605e5c;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 12px;
                      font-weight: 400;
                      line-height: 16px;
                      opacity: 0.8;
                    }
              >
                 
              </div>
            </div>
            <div
              class=""
            >
              <div
                class=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      border-left: 4px solid #E5E5E5;
                      color: #323130;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 28px;
                      font-weight: 600;
                      line-height: 22px;
                      margin-top: unset;
                      padding-left: 8px;
                    }
              >
                <div
                  class=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                      }
                >
                  2020/04/30
                </div>
                <div
                  class=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #E5E5E5;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 28px;
                        font-weight: bold;
                        line-height: 36px;
                      }
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=

          {
            padding-top: 16px;
            width: 0px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone4"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: center;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="first"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #E5E5E5;
                              border-color: #E5E5E5;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #E5E5E5, #E5E5E5);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        first
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="second"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #0078D4;
                              border-color: #0078D4;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #0078D4, #0078D4);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        second
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="third"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #DADADA;
                              border-color: #DADADA;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #DADADA, #DADADA);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        third
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Donut chart interactions Should reflect theme change 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background: #1b1a19;
          color: #f3f2f1;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      class=
          ms-DonutChart
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            display: flex;
            flex-direction: column;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: 100%;
            width: 100%;
          }
    >
      <div
        class=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone6"
        data-tabster="{\\"uncontrolled\\": {}}"
      >
        <div>
          <svg
            aria-label="Donut chart example"
            class=

                {
                  alignment-adjust: center;
                  box-sizing: content-box;
                  display: block;
                  height: -40px;
                  overflow: visible;
                  width: 0px;
                }
            focusable="false"
            viewBox="0 0 0 0"
          >
            <g
              transform="translate(0, -20)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class=

                      {
                        cursor: default;
                        fill: #E5E5E5;
                        outline: transparent;
                        stroke: #1b1a19;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                  d="M0.585,-54.997A55,55,0,0,1,51.383,-19.615L-18.955,6.382Z"
                  data-is-focusable="true"
                  id="_Pie_4first20000"
                  opacity="1"
                  role="img"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class=

                      {
                        cursor: default;
                        fill: #0078D4;
                        outline: transparent;
                        stroke: #1b1a19;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                  d="M51.789,-18.517A55,55,0,0,1,-22.338,50.26L8.846,-17.938Z"
                  data-is-focusable="true"
                  id="_Pie_4second39000"
                  opacity="1"
                  role="img"
                  tabindex="-1"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class=

                      {
                        cursor: default;
                        fill: #DADADA;
                        outline: transparent;
                        stroke: #1b1a19;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                  d="M-23.402,49.773A55,55,0,0,1,-0.585,-54.997L-0.585,19.991Z"
                  data-is-focusable="true"
                  id="_Pie_4third45000"
                  opacity="1"
                  role="img"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <span
        class="ms-layer"
      />
      <div
        class=

            {
              padding-top: 16px;
              width: 0px;
            }
      >
        <div
          class=

              {
                align-items: center;
                margin-bottom: 0;
                margin-left: -8px;
                margin-right: 0;
                margin-top: -8px;
                white-space: nowrap;
                width: 100%;
              }
        >
          <div>
            <div
              style="position: relative;"
            >
              <div
                data-automation-id="visibleContent"
                style="position: fixed; visibility: hidden;"
              >
                <div
                  aria-label="Legends"
                  aria-multiselectable="false"
                  class=
                      ms-FocusZone
                      &:focus {
                        outline: none;
                      }
                  data-focuszone-id="FocusZone7"
                  data-tabster="{\\"uncontrolled\\": {}}"
                  role="listbox"
                >
                  <div
                    class=
                        ms-OverflowSet
                        {
                          display: flex;
                          flex-wrap: wrap;
                          justify-content: center;
                          position: relative;
                        }
                    role="group"
                  >
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="first"
                        aria-posinset="1"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                            :host(.ms-Fabric--isFocusVisible) &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class=

                              {
                                background-color: #E5E5E5;
                                border-color: #E5E5E5;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, #E5E5E5, #E5E5E5);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          first
                        </div>
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="second"
                        aria-posinset="2"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                            :host(.ms-Fabric--isFocusVisible) &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                background-color: #0078D4;
                                border-color: #0078D4;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, #0078D4, #0078D4);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          second
                        </div>
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="third"
                        aria-posinset="3"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                            :host(.ms-Fabric--isFocusVisible) &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                background-color: #DADADA;
                                border-color: #DADADA;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, #DADADA, #DADADA);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          third
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
